# TrenchWar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
.github/workflows/: ci.yml
Controllers/: controller.cpp  controller.h
MapGenerator/: CMakeLists.txt  main.cpp  map4.txt  map_generator.cpp  map_generator.h  recources.qrc
Models/: Armor.cpp  Armor.h  equipment.h  map.cpp  map.h  weapon.cpp  weapon.h  world.cpp  world.h
Models/GameObjects/: game_object.cpp  game_object.h  soldier.cpp  soldier.h  terrain_object.cpp  terrain_object.h
Models/Tools/: pixmap_loader.cpp  pixmap_loader.h
TrenchWar/: CMakeLists.txt  main.cpp  map1.txt  resources.qrc
TrenchWar/Controllers/: controller.cpp  controller.h  events_controller.cpp  events_controller.h  game_controller.cpp  game_controller.h  main_controller.cpp  main_controller.h  menu_controller.cpp  menu_controller.h  trench_controller.cpp  trench_controller.h  trench_update.cpp  trench_update.h
TrenchWar/Models/: bullet.cpp  bullet.h  weapon.cpp  weapon.h  world.cpp  world.h
TrenchWar/Models/GameObjects/: bullet.cpp  bullet.h  game_object.cpp  game_object.h  soldier.cpp  soldier.h  terrain_object.cpp  terrain_object.h  tower.cpp  tower.h
TrenchWar/Models/GameObjects/MovingObjects/: MovingObject.cpp  MovingObject.h
TrenchWar/Models/GameObjects/MovingObjects/AirMovingObjects/: AirMovingObject.cpp  AirMovingObject.h  bullet.cpp  bullet.h
TrenchWar/Models/GameObjects/MovingObjects/GroundMovingObjects/: GroundMovingObject.cpp  GroundMovingObject.h  soldier.cpp  soldier.h
TrenchWar/Models/GameObjects/StableObjects/: tower.cpp  tower.h
TrenchWar/Models/Tools/: MathHelper.cpp  MathHelper.h  pixmap_loader.cpp  pixmap_loader.h  random_generator.cpp  random_generator.h  settings.cpp  settings.h
TrenchWar/Models/World/: Cell.cpp  Cell.h  Landscape.h  Layer.cpp  Layer.h  world.cpp  world.h
TrenchWar/Models/World/Maps/: GroundDistancesMap.cpp  GroundDistancesMap.h  LandscapeMap.cpp  LandscapeMap.h
TrenchWar/Models/World/Maps/Landscape/: Landscape.cpp  Landscape.h
TrenchWar/Network/: helpers.cpp  helpers.h  network_controller.cpp  network_controller.h  network_view.cpp  network_view.h  player_model.cpp  player_model.h  player_view.cpp  player_view.h
TrenchWar/Resources/: cost.json
TrenchWar/Resources/Maps/: labirint.txt  map123.json  map2.txt  map3.txt  map_test.txt
TrenchWar/Server/: main.cpp  server.cpp  server.h
TrenchWar/Views/: game_view.cpp  game_view.h  view.cpp
TrenchWar/Views/Game/: buy_window.cpp  buy_window.h  game_end_window.cpp  game_end_window.h  game_view.cpp  game_view.h  map_view.cpp  map_view.h  store_view.cpp  store_view.h
TrenchWar/Views/Menu/: exit_window.cpp  exit_window.h  menu_view.cpp  menu_view.h  pause_menu_view.cpp  pause_menu_view.h  settings_menu_view.cpp  settings_menu_view.h
TrenchWar/helpers/: enum_helpers.h  fonts.h  modes.h  rivals.h  sides.h  sizes.h  store.h  styles.h  weapons.h
Views/: view.cpp  view.h
